syntax = "proto3";

package Kartoffel;

service Kartoffel {

    //Entities
    rpc CreateEntity(CreateEntityRequest) returns (Entity){}
    rpc GetEntityByDI(GetEntityByDIRequest) returns (Entity){}
    rpc GetEntityByRoleId(GetEntityByRoleIdRequest) returns (Entity){}
    rpc GetEntitiesUnderOG(GetEntitiesUnderOGRequest) returns (EntityArray){}
    rpc GetEntitiesByHierarchy(GetEntitiesByHierarchyRequest) returns (EntityArray){}
    rpc GetEntityByIdentifier(GetEntityByIdentifierRequest) returns (Entity){}
    rpc SearchEntitiesByFullName(SearchEntitiesByFullNameRequest) returns (EntityArray){}
    rpc GetEntityById(GetEntityByIdRequest) returns (Entity){}
    rpc DeleteEntity(DeleteEntityRequest) returns (SuccessMessage){}
    rpc UpdateEntity(UpdateEntityRequest) returns (Entity){}
    rpc ConnectEntityAndDI(ConnectEntityAndDIRequest) returns (SuccessMessage){}
    rpc DisconnectDIFromEntity(DisconnectDIFromEntityRequest) returns (SuccessMessage){}
    rpc GetPictureByEntityId(GetPictureByEntityIdRequest) returns (Image){}
 

    rpc SearchOG(SearchOGRequest) returns (OGArray) {}
    rpc CreateOG(CreateOGRequest) returns (OrganizationGroup){}
    rpc CreateDI(CreateDIRequest) returns (DigitalIdentity){}
    rpc CreateRole(CreateRoleRequest) returns (Role){}
    rpc ConnectRoleAndDI(ConnectRoleAndDIRequest) returns (SuccessMessage){}
    rpc GetRoleByRoleId(GetRoleByRoleIdRequest) returns (Role){}
    rpc GetRolesUnderOG(GetRolesUnderOGRequest) returns (RoleArray){}
    rpc DeleteOG(DeleteOGRequest) returns (SuccessMessage){}
    rpc GetChildrenOfOG(GetChildrenOfOGRequest) returns (OGArray){}
    rpc DeleteRole(DeleteRoleRequest) returns (SuccessMessage){}
    rpc DeleteDI(DeleteDIRequest) returns (SuccessMessage){}
    rpc GetOGTree(GetOGTreeRequest) returns (OGTree){}
    rpc RenameRole(RenameRoleRequest) returns (SuccessMessage){}
    rpc RenameOG(RenameOGRequest) returns (SuccessMessage){}
}

message DeleteEntityRequest{
    string id = 1;
}

message GetEntityByIdentifierRequest{
    string identifier = 1;
}

message GetEntitiesByHierarchyRequest{
    string hierarchy = 1;
    bool direct = 2;
    int32 page = 3;
    int32 pageSize = 4;
}

message GetEntityByDIRequest{
    string uniqueId = 1;
}


message UpdateEntityRequest{
    string id = 1;
    UpdateEntityProperties properties = 2;
}

message UpdateEntityProperties{
    optional string displayName = 2;
    optional string entityType = 5;
    optional string identityCard = 6;
    optional string personalNumber = 7;
    optional string serviceType = 8;
    optional string firstName = 9;
    optional string lastName = 10;
    optional string akaUnit = 11;
    optional int64 dischargeDay = 12;
    optional string rank = 13;
    optional string mail = 14;
    optional string jobTitle = 15;
    repeated string phone = 16;
    repeated string mobilePhone = 17;
    optional string address = 18;
    optional string clearance = 19;
    optional string sex = 20;
    optional int64 birthDate = 21;
}

message RenameOGRequest{
    string id = 1;
    string name = 2;
}

message RenameRoleRequest{
    string uniqueId = 1;
    string jobTitle = 2;
}

message GetPictureByEntityIdRequest{
    string id = 1;
}
message Image {
    string image = 1;
}

// SearchEntitiesByFullName
message SearchEntitiesByFullNameRequest{
    string fullName = 1;
    optional string rank = 2;
    optional string entityType = 3;
    optional string underGroupId = 4;
    optional string status = 5;
    optional string source = 6;
}

message GetOGTreeRequest{
    string rootId = 1;
}

message OGTree{
    string id = 1;
    string name = 2;
    repeated OGTree children = 3;
}

// SearchOG
message SearchOGRequest{
    string hierarchyAndName = 1;
}

message OGArray{
    repeated OrganizationGroup groups = 1;
}

// CreateOG
message CreateOGRequest{
    string name = 1;
    string parent = 2;
    string source = 3;
}

// CreateDI
message CreateDIRequest{
    string type = 1;
    string source = 2;
    string uniqueId = 3;
    string mail = 4;
    bool isRoleAttachable = 5;
}

// CreateRole
message CreateRoleRequest{
    string jobTitle = 1;
    string directGroup = 2;
    string source = 3;
    string roleId = 4;
}

// ConnectRoleAndDI
message ConnectRoleAndDIRequest{
    string id = 1; //mongoId of role
    string uniqueId = 2; //uniqueId of DI
}

message EntityArray{
    repeated Entity entities = 1;
}


// GetRoleByRoleId
message GetRoleByRoleIdRequest{
    string roleId = 1;
}

// GetRolesUnderOG
message GetRolesUnderOGRequest{
    string id = 1; //mongoId of OG
    bool direct = 2;
}

message RoleArray{
    repeated Role roles = 1;
}

// ConnectEntityAndDI
message ConnectEntityAndDIRequest{
    string id = 1; //mongoId of entity
    string uniqueId = 2; //uniqueId of DI (taken from the role)
}

// CreateEntity
message CreateEntityRequest{
    string firstName = 1;
    string lastName = 2;
    string identityCard = 3;
    string personalNumber = 4;
    string serviceType = 5;
    repeated string phone = 6;
    repeated string mobilePhone = 7;
    string address = 8;
    string clearance = 9;
    string sex = 10;
    int64 birthDate = 11;
    string entityType = 12;
}

// GetEntityByRoleId
message GetEntityByRoleIdRequest{
    string roleId = 1;
}

// DisconnectDIFromEntity
message DisconnectDIFromEntityRequest{
    string id = 1; //mongoId of entity
    string uniqueId = 2; //uniqueId of DI (taken from the role)
}

// GetEntityByMongoId
message GetEntityByIdRequest{
    string id = 1; //mongoId of entity
}

// DeleteOG
message DeleteOGRequest{
    string id = 1; //mongoId of OG
}

// GetChildrenOfOG
message GetChildrenOfOGRequest{
    string id = 1; //mongoId of OG
}

// DeleteRole
message DeleteRoleRequest{
    string roleId = 1;
}

// DeleteDI
message DeleteDIRequest{
    string uniqueId = 1; //uniqueId of DI (taken from the role)
}

// GetEntitiesUnderOG
message GetEntitiesUnderOGRequest{
    string id = 1; //mongoIds of OG
    bool direct = 2;
    int32 page = 3;
    int32 pageSize = 4;
}

//SuccessMessage
message SuccessMessage{
    bool success = 1;
}

// Kartoffel messages

message OrganizationGroup{
    string id = 1;
    string name = 2;
    string source = 3;
    repeated string ancestors = 4;
    string hierarchy = 5;
    string status = 6;
    bool isLeaf = 7;
    string createdAt = 8;
    string updatedAt = 9;
    repeated Entity directEntities = 10;
    repeated Role directRoles = 11;
}

message Role{
    string roleId = 1;
    string jobTitle = 2;
    string digitalIdentityUniqueId = 3;
    string directGroup = 4;
    string hierarchy = 5;
    repeated string hierarchyIds = 6;
    string clearance = 7;
    string source = 8;
    string createdAt = 9;
    string updatedAt = 10;
}


message Entity{
    string id = 1;
    string displayName = 2;
    string directGroup = 3;
    string hierarchy = 4;
    string entityType = 5;
    string identityCard = 6;
    string personalNumber = 7;
    string serviceType = 8;
    string firstName = 9;
    string lastName = 10;
    string fullName = 11;
    string akaUnit = 12;
    string dischargeDay = 13;
    string rank = 14;
    string mail = 15;
    string jobTitle = 16;
    repeated string phone = 17;
    repeated string mobilePhone = 18;
    string address = 19;
    string clearance = 20;
    string sex = 21;
    string birthDate = 22;
    string createdAt = 23;
    string updatedAt = 24;
    repeated DigitalIdentity digitalIdentities = 25;
    string picture = 26;
    string goalUserID = 27;
}

message DigitalIdentity{
    string type = 1;
    string source = 2;
    string mail = 3;
    string uniqueId = 4;
    string entityId = 5;
    int64 createdAt = 6;
    int64 updatedAt = 7;
    bool isRoleAttachable = 8;
    Role role = 9;
}
